unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Accounting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Comments__c</fullName>
    <label>Accounting Comments</label>
    <type>TextArea</type>
</CustomField>