unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Line_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Line_Count__c</fullName>
    <inlineHelpText>The number of purchase order lines associated with the purchase order</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>