unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Purchase_Order_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Purchase_Order_Format__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>