unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor_City__c</fullName>
    <label>Vendor City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>