unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders (Vendor Contact)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>