unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor_State__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor_State__c</fullName>
    <label>Vendor State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>