unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>mkneill 08/23/16 ..added to facilitate a future approval process for POs</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>