unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>mkneill 08/23/16 added to failitate future PO approval process</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>