unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Manually_Edit_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Manually_Edit_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to manually edit the "Ship-To" address.</inlineHelpText>
    <label>Manually Edit Shipping Address</label>
    <type>Checkbox</type>
</CustomField>