unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Shipping_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_State_Zip__c</fullName>
    <formula>AcctSeedERP__Shipping_City__c + " " +  AcctSeedERP__Shipping_State__c + ", " +  AcctSeedERP__Shipping_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City State Zip</label>
    <type>Text</type>
</CustomField>