unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Shipping_Contact_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_E_Mail__c</fullName>
    <formula>AcctSeedERP__Shipping_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Contact E-Mail</label>
    <type>Text</type>
</CustomField>