unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AMEX Open</fullName>
            </value>
            <value>
                <fullName>AMEX Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>