unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_Alias__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Alias__c</fullName>
    <formula>AcctSeedERP__Vendor__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Alias</label>
    <type>Text</type>
</CustomField>