unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Vendor_City_State_Zip__c</fullName>
    <formula>AcctSeedERP__Vendor_City__c + " " +  AcctSeedERP__Vendor_State__c + ", " + AcctSeedERP__Vendor_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor City State Zip</label>
    <type>Text</type>
</CustomField>