unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Vendor_E_Mail__c</fullName>
    <formula>AcctSeedERP__Vendor_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor E-Mail</label>
    <type>Text</type>
</CustomField>