unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Vendor_PO_Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PO_Email_Flag__c</fullName>
    <formula>AcctSeedERP__Vendor__r.Send_PO_Notification_Email_To_Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor PO Email Flag</label>
    <type>Checkbox</type>
</CustomField>