unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/validationRules/AcctSeedERP__Status_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Status_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(AcctSeedERP__Status__c))</errorConditionFormula>
    <errorDisplayField>AcctSeedERP__Status__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>