unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Accounting_Comments__c</columns>
    <columns>AcctSeedERP__Comment__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Type__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Canceled</value>
    </filters>
    <label>Active - Waiting for Approval</label>
    <language>en_US</language>
</ListView>