unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/AMEX_Open.listView-meta.xml
<ListView>
    <fullName>AMEX_Open</fullName>
    <columns>NAME</columns>
    <columns>Accounting_Comments__c</columns>
    <columns>Opportunity__c</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>Account__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Type__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Terms__c</field>
        <operation>equals</operation>
        <value>AMEX Open</value>
    </filters>
    <label>AMEX Open</label>
    <language>en_US</language>
</ListView>