unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Earthbend.listView-meta.xml
<ListView>
    <fullName>Earthbend</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>AcctSeedERP__Shipping_Contact__c</columns>
    <filterScope>Mine</filterScope>
    <label>Earthbend</label>
    <language>en_US</language>
</ListView>