unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Mitel_Open_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Mitel_Open_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>Vendor_Alias__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>AcctSeedERP__Vendor__c</field>
        <operation>contains</operation>
        <value>Mitel</value>
    </filters>
    <label>Mitel Open Purchase Orders</label>
</ListView>