unpackaged/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Open_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>AcctSeedERP__Type__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>Account__c</columns>
    <columns>AcctSeedERP__Vendor_Street__c</columns>
    <columns>AcctSeedERP__Vendor_City__c</columns>
    <columns>AcctSeedERP__Vendor_State__c</columns>
    <columns>AcctSeedERP__Vendor_Postal_Code__c</columns>
    <columns>AcctSeedERP__Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Purchase Orders</label>
    <language>en_US</language>
</ListView>